--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /node_modules
 /public/hot
+!/public/storage/app/seeds/*
 /public/storage
-!/public/storage/app/seeds/
 /storage/*.key
 /vendor
 .env
